<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2013 - 2016 Peter Kenji Yamanaka
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>

  <string name="app_name">Power Manager</string>
  <string name="app_date">January 22, 2016 11:08:27</string>

  <string name="radio_delay">%s Timeout Delay</string>
  <string name="delay_none">No Delay</string>
  <string name="delay_five">Five Seconds</string>
  <string name="delay_ten">Ten Seconds</string>
  <string name="delay_fifteen">Fifteen Seconds</string>
  <string name="delay_thirty">Thirty Seconds</string>
  <string name="delay_fourtyfive">Forty Five Seconds</string>
  <string name="delay_sixty">One Minute</string>
  <string name="delay_ninty">One Minute Thirty Seconds</string>
  <string name="delay_twomin">Two Minutes</string>
  <string name="reopen_interval_duration">Re-Open Interval Duration</string>
  <string name="menu_gift_ad">Support pyamsoft: View an Ad</string>
  <string name="boot_enabled">Run on Startup </string>
  <string name="suspend_charging">Suspend When Charging</string>
  <string name="enable_notification">Enable Notification</string>
  <string name="enable_foreground">Run Service in Foreground</string>
  <string name="reset_all_settings">Reset All Settings</string>
  <string name="screen_receiver_registered">ScreenStateReceiver already registered</string>
  <string name="screen_receiver_unregistered">ScreenStateReceiver already unregistered</string>
  <string name="set_bluetooth_false">setBluetoothEnabled: false</string>
  <string name="set_bluetooth_true">setBluetoothEnabled: false</string>
  <string name="set_wifi_true">setWifiEnabled: true</string>
  <string name="set_wifi_false">setWifiEnabled: false</string>
  <string name="set_sync_false">setMasterAutoSyncAutomatically: false</string>
  <string name="set_sync_true">setMasterAutoSyncAutomatically: true</string>
  <string name="set_data_false">setDataEnabled: false</string>
  <string name="set_data_true">setDataEnabled: true</string>
  <string name="data_set_method_null">setMobileDataEnabled is null</string>
  <string name="data_lollipop_error">Not Available from Lollipop upwards</string>
  <string name="power_manager_started_toast">Power Manager Service Started</string>
  <string name="screen_off">Screen OFF</string>
  <string name="screen_on">Screen ON</string>
  <string name="empty_run_cmd">Empty run command</string>
  <string name="null_msg">: NULL MESSAGE</string>
  <string name="interval_not_needed">| Interval is not enabled for radio. Do Nothing</string>
  <string name="set_alarm_for_interval">"| Set alarm for interval "</string>
  <string name="radio_not_managed">: is not managed or is OFF. Do nothing.</string>
  <string name="radio_disable_in">": Disable radio in "</string>
  <string name="enable_radio_in">: Enable radio</string>
  <string name="bat_percent">"Percent: %d"</string>
  <string name="bat_charging">"Charging: %s"</string>
  <string name="bat_temperature">"Temperature: %sC"</string>
  <string name="reset_settings_title">Reset User Settings</string>
  <string name="reset_settings_msg">Really reset all User preferences? This will reset the application.</string>
  <string name="close_app_msg">All Services have been stopped and all preferences have been cleared. Exit Power Manager</string>
  <string name="bluetooth">Bluetooth</string>
  <string name="data">Data</string>
  <string name="wifi">Wifi</string>
  <string name="sync">Sync</string>
  <string name="help">Help</string>
  <string name="change_to">"Change to: %s"</string>
  <string name="disable_in_time">Disable in: %d</string>
  <string name="battery_state_register">BatteryStateReceiver already registered</string>
  <string name="battery_state_unregister">BatteryStateReceiver already unregistered</string>
  <string name="about_app_info">Application Info</string>
  <string name="about_click_to_view">Click to View</string>
  <string name="about_app_version">Application Version</string>
  <string name="about_app_build">Application Build</string>
  <string name="about_app_date">Application Date</string>
  <string name="cancel">Cancel</string>
  <string name="create">Create</string>
  <string name="trigger_name_hint">Trigger Name</string>
  <string name="trigger_level_hint">Trigger at Percent</string>
  <string name="manage_radio">Manage %s:</string>
  <string name="reopen_radio">ReOpen %s:</string>
  <string name="trigger_dialog_do_not_change_radio">Do Not Change %s</string>
  <string name="trigger_dialog_change_radio_on">Turn %s On</string>
  <string name="trigger_dialog_change_radio_off">Turn %s Off</string>
  <string name="title_why_permissions">Why all these Permissions?</string>
  <string name="content_why_permissions">The permissions required by Power Manager are requested to allow the application to control certain physical radios on the device. For example, Power Manager needs to be able to access and control the Wifi and Network permissions to access and change the state of Wifi and Mobile Data. It requires access as well to Bluetooth and Sync permissions for similar reasons. It also can request the launch on startup permission to allow users to start the application with the device if they so desire.</string>
  <string name="title_help_out">How can I help out?</string>
  <string name="content_help_out"><![CDATA[Power Manager is developed in the Open on <a href=\"https://github.com/pyamsoft/power-manager\">GitHub</a>. If you know a few things about Android programming and are wanting to help out with development you can do so by creating issue tickets to squash bugs, and propose feature requests for future inclusion.]]></string>
  <string name="content_what_are_triggers">Power Triggers are user defined commands which are set to run at a specified battery percent. Power Triggers will run instantly whether the screen is on or off, and will instantly affect the state of the device. Power Triggers can range from doing a large number of operations, to doing effectively nothing and simply notifying the user about a certain battery level.</string>
  <string name="title_what_are_triggers">What are Power Triggers?</string>
  <string name="title_what_are_plans">What are Power Plans?</string>
  <string name="content_what_are_plans">Power Plans are predefined settings which control how Power Manager attempts to handle device radios and interfaces. The Power Plan controls how aggresively Power Manager will look to turn off functions of the device to save power, ranging from extremely lax to hyper aggressive instant response. The standard plan is geared towards fitting most user needs.</string>
  <string name="title_how_use">How do I Use This?</string>
  <string name="content_how_use">"Power Manager is designed as a 'set it and forget it' type of application. You can toggle the settings and tweak them to your personal needs once, and then close the application and rest easy knowing that Power Manager will only ever do what you tell it to "</string>
  <string name="title_what_is">What is Power Manager?</string>
  <string name="content_what_is">Power Manager is a free, open source application which seeks to save power on Android devices by turning off functions like Wifi and Bluetooth when the device\'s screen is off and not being actively used. It reaches this goal through the use of standard Android functions and permissions</string>
  <string name="reopen_interval_delay">ReOpen Interval Delay</string>
  <string name="radio_delay_explain">Delay between when the screen turns off and when Power Manager turns off %s</string>
  <string name="reopen_interval_delay_explain">Length of time elapsed before Power Manager turns %s back on</string>
  <string name="reopen_interval_duration_explain">Length of time that %s will stay enabled before being turned off once again. This duration will cycle.</string>
  <string name="okay_got_it">Okay, Got it</string>
    <string formatted="false" name="interval_explain">The Interval controls whether %s will be
        turned back on after it has been managed. Has no effect if %s is not managed</string>
    <string formatted="false" name="manage_explain">If %s is managed, Power Manager will
        automatically turn it off after the delay requested. If %s is not managed, all options on
        this page will be ignored</string>
  <string name="manage">Manage</string>
  <string name="boot">Boot:</string>
  <string name="suspend">Suspend:</string>
  <string name="interval">Interval</string>
  <string name="reset_explain">Reset all application settings to defaults. This will also close the application and is not reversable.</string>
  <string name="open_source_licenses">Open Source Licenses</string>
</resources>

