<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2013 - 2016 Peter Kenji Yamanaka
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      >

    <ImageView
        android:id="@+id/new_trigger_dialog_radio_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/full_oval"
        android:contentDescription="@string/blank"
        android:scaleType="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

      <android.support.v7.widget.SwitchCompat
          android:id="@+id/new_trigger_dialog_radio_switch"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:gravity="center_vertical"
          android:text="@string/manage_radio"
          android:textAppearance="?android:attr/textAppearanceMedium"
          />

      <LinearLayout
          android:id="@+id/new_trigger_dialog_radio_toggle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:layout_marginRight="8dp"
          android:orientation="vertical"
          android:visibility="gone"
          >

        <CheckedTextView
            android:id="@+id/new_trigger_dialog_radio_toggle_none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkMark="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center_vertical"
            android:text="@string/trigger_dialog_do_not_change_radio"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <CheckedTextView
            android:id="@+id/new_trigger_dialog_radio_toggle_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkMark="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center_vertical"
            android:text="@string/trigger_dialog_change_radio_on"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <CheckedTextView
            android:id="@+id/new_trigger_dialog_radio_toggle_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkMark="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center_vertical"
            android:text="@string/trigger_dialog_change_radio_off"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />


      </LinearLayout>

    </LinearLayout>


  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      >

    <ImageView
        android:id="@+id/new_trigger_dialog_reopen_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/full_oval"
        android:contentDescription="@string/blank"
        android:scaleType="center"
        />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/new_trigger_dialog_reopen_switch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:text="@string/reopen_radio"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

  </LinearLayout>

</LinearLayout>
