<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2013 - 2016 Peter Kenji Yamanaka
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:padding="8dp"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/manage"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        >

      <LinearLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center_horizontal"
          android:orientation="vertical"
          >

        <ImageView
            android:id="@+id/power_plan_manage_wifi_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/full_oval"
            android:contentDescription="@string/blank"
            android:scaleType="center"
            />

        <TextView
            android:id="@+id/power_plan_manage_wifi_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

      </LinearLayout>

      <LinearLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center_horizontal"
          android:orientation="vertical"
          >

        <ImageView
            android:id="@+id/power_plan_manage_data_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/full_oval"
            android:contentDescription="@string/blank"
            android:scaleType="center"
            />

        <TextView
            android:id="@+id/power_plan_manage_data_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

      </LinearLayout>

      <LinearLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center_horizontal"
          android:orientation="vertical"
          >

        <ImageView
            android:id="@+id/power_plan_manage_bluetooth_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/full_oval"
            android:contentDescription="@string/blank"
            android:scaleType="center"
            />

        <TextView
            android:id="@+id/power_plan_manage_bluetooth_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

      </LinearLayout>

      <LinearLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center_horizontal"
          android:orientation="vertical"
          >

        <ImageView
            android:id="@+id/power_plan_manage_sync_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/full_oval"
            android:contentDescription="@string/blank"
            android:scaleType="center"
            />

        <TextView
            android:id="@+id/power_plan_manage_sync_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

      </LinearLayout>
    </LinearLayout>

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      >

    <CheckedTextView
        android:id="@+id/power_plan_misc_boot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:clickable="false"
        android:gravity="center_vertical"
        android:text="@string/boot"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <CheckedTextView
        android:id="@+id/power_plan_misc_suspend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:clickable="false"
        android:gravity="center_vertical"
        android:text="@string/suspend"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:orientation="vertical"
      >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/interval"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        >

      <LinearLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center_horizontal"
          android:orientation="vertical"
          >

        <ImageView
            android:id="@+id/power_plan_reopen_wifi_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/full_oval"
            android:contentDescription="@string/blank"
            android:scaleType="center"
            />

        <TextView
            android:id="@+id/power_plan_reopen_wifi_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

      </LinearLayout>

      <LinearLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center_horizontal"
          android:orientation="vertical"
          >

        <ImageView
            android:id="@+id/power_plan_reopene_data_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/full_oval"
            android:contentDescription="@string/blank"
            android:scaleType="center"
            />

        <TextView
            android:id="@+id/power_plan_reopen_data_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

      </LinearLayout>

      <LinearLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center_horizontal"
          android:orientation="vertical"
          >

        <ImageView
            android:id="@+id/power_plan_reopen_bluetooth_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/full_oval"
            android:contentDescription="@string/blank"
            android:scaleType="center"
            />

        <TextView
            android:id="@+id/power_plan_reopen_bluetooth_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

      </LinearLayout>

      <LinearLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center_horizontal"
          android:orientation="vertical"
          >

        <ImageView
            android:id="@+id/power_plan_reopen_sync_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/full_oval"
            android:contentDescription="@string/blank"
            android:scaleType="center"
            />

        <TextView
            android:id="@+id/power_plan_reopen_sync_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

      </LinearLayout>
    </LinearLayout>

  </LinearLayout>

</LinearLayout>
